--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="games/click-the-box.html">Games</a></li>
         <li><a href="tools/notepad.html">Tools</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">About</a></li> 
+        <li><a href="tools/calculator.html">Calculator</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
