--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="tools/notepad.html">Tools</a></li>
         <li><a href="about.html">About</a></li> 
         <li><a href="tools/calculator.html">Calculator</a></li>
+        <a href="calculator.html">Open Calculator</a>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
